# minictc

./: .gitignore  CMakeLists.txt  README.md
src/: 3crowns.h  CMakeLists.txt  ctc.cc  ctc.h  minictc.cc  minictc.h
test/: CMakeLists.txt  test.cc  test_minictc.cc
